[package]
name = "rtrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
glam = "0.24.0"
gltf = "1.1.0"
log = "0.4.17"
obj-rs = "0.7.1"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.6"

[profile.dev]
opt-level = 1 
