[package]
name = "rtrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
glam = "0.24.0"
gltf = "1.1.0"
log = "0.4.17"
obj-rs = "0.7.1"
winit = "0.28.6"
strum = "0.24"
strum_macros = "0.24"
sierra = "0.6.0"
scoped-arena = "0.4.1"

[build-dependencies]
anyhow = "1.0.71"
spirv-builder = "0.7.0"

[profile.dev]
opt-level = 1 

[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3

[workspace]
members = [
    "shaders"
]